LOG New version 0.29.3

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "xroar-0.28.1.tar.gz": 75b29e5e6ef1c02d0af10e6acbf265a26c55d75d
+  xroar-0.29.3.tar.gz: 64948deab0d3bc75349b2d491dfa1353d4fed053
